5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1671_1102.log
== TEST (2019-04-24 15:18:18) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
H=float(input())
h=float(input())
r=float(input())
Vc=pi*(r**2)*x
Ve=(4*pi*r**3)/3
Vcl=(pi*(x**2)*(3*r-x))/3
if(H>0)and(h>0)and(r>0)and(H>h)and(H>2*r):
	print("Entradas:",H,h,r)
	print("Volume:",Vc+Ve+Vcl,"litros")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    Vc=pi*(r**2)*x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:22:20) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
H=float(input())
h=float(input())
r=float(input())
Vc=pi*(r**2)*h
Ve=(4*pi*r**3)/3
Vcl=(pi*(h**2)*(3*h-x))/3
if(H>0)and(h>0)and(r>0)and(H>h)and(H>2*r):
	print("Entradas:",H,h,r)
	print("Volume:",Vc+Ve+Vcl,"litros")
-- EXECUTION TIME:
0.222548
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1102/main.py", line 12, in <module>
    Vcl=(pi*(h**2)*(3*h-x))/3
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:22:22) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
H=float(input())
h=float(input())
r=float(input())
Vc=pi*(r**2)*h
Ve=(4*pi*r**3)/3
Vcl=(pi*(h**2)*(3*h-x))/3
if(H>0)and(h>0)and(r>0)and(H>h)and(H>2*r):
	print("Entradas:",H,h,r)
	print("Volume:",Vc+Ve+Vcl,"litros")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    Vcl=(pi*(h**2)*(3*h-x))/3
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:54) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
H=float(input())
h=float(input())
r=float(input())
Vc=pi*(r**2)*x
Ve=(4*pi*r**3)/3
Vcl=(pi*(x**2)*(3*h-x))/3
if(H>0)and(h>0)and(r>0)and(H>h)and(H>2*r):
	print("Entradas:",H,h,r)
	print("Volume:",Vc+Ve+Vcl,"litros")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    Vc=pi*(r**2)*x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
